--- a/resources/sass/_reusable.scss
+++ b/resources/sass/_reusable.scss
@@ -18,8 +18,8 @@
     }
 
     .slick-prev {
-     z-index: 99;
-     margin-left: 30px;
+      z-index: 99;
+      margin-left: 30px;
     }
 
     .price-box {
@@ -58,7 +58,7 @@
     margin-top: -11px;
     height: 65px;
     .list-view-image {
-      display: none!important;
+      display: none !important;
     }
 
     .qs-list-view {
@@ -266,3 +266,22 @@
 }
 
 /* End Popover */
+
+/* Loader */
+
+.loader {
+  display: none;
+  position: relative;
+  left: 7px;
+  top: 2px;
+  svg {
+    width: 18px;
+    height: 18px;
+  }
+  svg path,
+  svg rect {
+    fill: white;
+  }
+}
+
+/* End Loader */
