--- a/public/css/app.css
+++ b/public/css/app.css
@@ -393,11 +393,10 @@ a:hover {
 /* Loader */
 
 .loader {
-  display: inline-block;
+  display: none;
   position: relative;
   left: 7px;
   top: 2px;
-  display: none;
 }
 
 .loader svg {
@@ -2449,12 +2448,12 @@ a:hover {
   display: block;
 }
 
-.opened .modal-dialog {
+.opened .modal-dialog-email {
   transform: translate(0, 0);
   top: 20%;
 }
 
-.modal-dialog {
+.modal-dialog-email {
   background: #fefefe;
   border: #333333 solid 0px;
   border-radius: 5px;
@@ -2470,11 +2469,11 @@ a:hover {
   transition: transform 0.3s ease-out;
 }
 
-.modal-body {
+.modal-body-email {
   padding: 20px;
 }
 
-.modal-body input {
+.modal-body-email input {
   width: 100%;
   padding: 8px;
   border-radius: 3px;
@@ -2485,18 +2484,18 @@ a:hover {
   font-size: 14px;
 }
 
-.modal-body label {
+.modal-body-email label {
   display: block;
   text-align: left !important;
   font-size: 12px;
 }
 
-.modal-header,
-.modal-footer {
+.modal-header-email,
+.modal-footer-email {
   padding: 15px 20px;
 }
 
-.modal-footer button {
+.modal-footer-email button {
   color: white;
   font-size: 15px;
   padding: 8px 17px;
@@ -2508,15 +2507,15 @@ a:hover {
   transition: all 0.1s ease-in-out;
 }
 
-.modal-footer button:hover {
+.modal-footer-email button:hover {
   background: #21816b;
 }
 
-.modal-header {
+.modal-header-email {
   border-bottom: #eeeeee solid 1px;
 }
 
-.modal-header h2 {
+.modal-header-email h2 {
   font-size: 20px;
 }
 
