--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,52 @@
 @import "publicauth.scss";
 @import "dashboard.scss";
 
+#accept-cookies {
+  display: none;
+  width: 300px;
+  padding: 20px;
+  height: auto;
+  background: $main-green-color;
+  border: 1px solid $main-green-color;
+  position: fixed;
+  bottom: 25px;
+  left: 25px;
+  z-index: 9999999999999999999999999;
+  @include border-radius(3px);
+  p {
+    font-size: 12px;
+    color: white;
+  }
+
+  a{
+    display: inline-block;
+    color: white;
+    text-decoration: underline;
+    font-size: 12px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  button {
+    background: white;
+    border: none;
+    @include border-radius(3px);
+    padding: 5px 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+
+  @media(max-width: 767px) {
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+  }
+
+}
+
 .fotorama {
   img {
     object-fit: cover !important;
@@ -38,14 +84,32 @@
   }
 }
 
+.forbidden-access-cannabis {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  -webkit-filter: blur(4px);
+  -moz-filter: blur(4px);
+  -ms-filter: blur(4px);
+  -o-filter: blur(4px);
+  filter: blur(8px);
+}
+
 .desktop-user-cannabis-error {
-  padding: 20px 30px;
-  text-align: center;
-  border: 2px solid #9c9a99;
-  @include border-radius(4px);
-  box-shadow: 10px 10px 8px -8px #cccccc;
-  max-width: 500px;
-  margin: 100px auto;
+  position: relative;
+  h3 {
+    position: absolute;
+    z-index: 99999;
+    left: 50%;
+    margin-left: -325px;
+    top: 300px;
+    border: 2px solid gray;
+    width: 650px;
+    @include border-radius(4px);
+    box-shadow: 10px 10px 8px -8px #cccccc;
+    padding: 20px 30px;
+    text-align: center;
+  }
   span {
     color: indianred;
     font-weight: bold;
@@ -84,7 +148,7 @@
       }
     }
   }
-  @media(max-width: 992px) {
+  @media (max-width: 992px) {
     display: none !important;
   }
 }
@@ -112,8 +176,8 @@
 }
 
 .wrapper {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 35px;
+  margin-bottom: 35px;
   @media (max-width: 767px) {
     margin: 10px 10px 0;
   }
@@ -216,7 +280,7 @@
   margin-top: -1px;
   position: relative;
 
-  @media(max-width: 992px){
+  @media (max-width: 992px) {
     position: relative;
     top: 1px;
   }
@@ -252,10 +316,15 @@
   color: white !important;
   opacity: 1 !important;
   border: none !important;
-  @include transform(scale(1.08));
+  border-bottom: 2px solid white !important;
+  border-top: 2px solid white !important;
+  -webkit-box-shadow: -1px 10px 5px -6px rgba(143,143,143,1);
+  -moz-box-shadow: -1px 10px 5px -6px rgba(143,143,143,1);
+  box-shadow: -1px 10px 5px -6px rgba(143,143,143,1);
+  @include transform(scale(1.07));
   z-index: 99;
   @media (max-width: 991px) {
-    @include transform(scale(1)!important);
+    @include transform(scale(1) !important);
   }
 }
 
@@ -392,7 +461,7 @@
   @media (max-width: 767px) {
     display: none !important;
   }
- 
+
   &__item {
     &:first-of-type {
       flex: 0 0 70%;
@@ -579,7 +648,7 @@
     float: left;
     li {
       display: inline-block;
-      width: 90%;
+      width: 95%;
 
       a {
         width: 100%;
@@ -623,11 +692,11 @@
 
 [data-category="jobs"] {
   ul {
-    max-width: 50%;
+    max-width: 100%;
     float: left;
     li {
       display: inline-block;
-      width: 90%;
+      width: 100%;
 
       a {
         width: 100%;
@@ -790,12 +859,14 @@ footer {
 
     @media (max-width: 767px) {
       flex: 0 0 100%;
-      padding-left: 0;
-      padding-right: 0;
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     @media (max-width: 400px) {
       flex: 0 0 100%;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
@@ -845,7 +916,6 @@ footer {
   flex: 0 0 50%;
   position: relative;
   text-align: center;
-  flex: none;
   margin-top: 10px;
   input {
     @include border-radius(0 5px 5px 0);
@@ -858,6 +928,10 @@ footer {
       padding-left: 0 !important;
       text-indent: 20px;
     }
+  }
+
+  @media(min-width: 767px) and (max-width: 992px) {
+    flex: none;
   }
 
   @media (max-width: 600px) {
