--- a/resources/sass/_search.scss
+++ b/resources/sass/_search.scss
@@ -294,6 +294,20 @@
   flex: 0 0 100% !important;
   padding: 0 !important;
   padding-bottom: 15px !important;
+
+  @media(max-width: 767px) {
+    .product-template__info {
+      h4 {
+        padding-left: 10px !important;
+        max-width: 550px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        font-size: 8px !important;
+        margin-top: -5px !important;
+      }
+    }
+  }
   
   .product-template {
     box-shadow: none;
@@ -332,6 +346,9 @@
       @media(max-width: 992px){
         right: 20px;
       }
+    }
+    @media(max-width: 767px) {
+      display: none !important;
     }
   }
 
