--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -88,11 +88,11 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  -webkit-filter: blur(4px);
-  -moz-filter: blur(4px);
-  -ms-filter: blur(4px);
-  -o-filter: blur(4px);
-  filter: blur(8px);
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -ms-filter: blur(3px);
+  -o-filter: blur(3px);
+  filter: blur(3px);
 }
 
 .desktop-user-cannabis-error {
@@ -104,6 +104,7 @@
     margin-left: -325px;
     top: 300px;
     border: 2px solid gray;
+    background: white;
     width: 650px;
     @include border-radius(4px);
     box-shadow: 10px 10px 8px -8px #cccccc;
@@ -185,7 +186,6 @@
 
 .outer-wrap {
   border: 10px solid #e4e4e4;
-  outline: 2px solid #cdcdcd;
 }
 
 .outer-wrap-mobile {
@@ -199,6 +199,7 @@
   flex-flow: row wrap;
   padding: 15px;
   padding-right: 0;
+  // border: 2px solid #cdcdcd;
   @media (max-width: 991px) {
     display: none;
     padding-right: 15px;
